--- a/main.html
+++ b/main.html
@@ -10,7 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<p><b></b>What is the captial of India?</b></p>
+	<input type="radio">New Delhi</input><br><br>
+	<input type="radio">Mumbai</input>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" id="delhi">
+	New Delhi is the capital of India and an administrative district of NCT Delhi.
+</blockquote>
 </body>
 
 </html>
